# private-messenger

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
design/: THREAT_MODEL.md
desktop/: README.md
docs/: ci-badge-snippet.md  overview.md
http/: api.http
infra/: README.md  docker-compose.yml
prompts/: BUILD_PLAN.md
server/: app.py
web/: README.md
