[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "private-messenger-backend"
version = "0.1.0"
description = "FastAPI signaling server for Private Messenger (E2EE, WebRTC DataChannels)."
readme = "../README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [{ name = "ShapArt" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "redis>=5.0.7",
    "httpx>=0.27.2",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.4.0",
    "uvloop>=0.20.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "black>=24.10.0",
    "mypy>=1.12.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "B", "I", "UP", "N", "ASYNC", "PL"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
